--- a/learning-area-master/css/css-layout/fundamental-layout-comprehension/styles.css
+++ b/learning-area-master/css/css-layout/fundamental-layout-comprehension/styles.css
@@ -21,19 +21,39 @@ body {
     margin: 0 auto;
     padding: 0 20px;
     max-width: 980px;
+    /* my code */
+    display: grid;
+    grid-template-columns: 5fr 1fr;
+    grid-gap: 20px;
   }
   
+  /* my code */
+  .grid img {
+    float: left;
+    margin: 0 15px 10px 0;
+  }
+
   nav {
     background-color: #000;
     padding: .5em;
+    /* my code */
+    position: sticky;
   }
   
   nav ul {
     margin: 0;
     padding: 0;
     list-style: none;
+    /* my code: 弹性盒子, 沿主轴分布两端无间隙 */
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
   }
-  
+  /* my code */
+  /* nav ul li {
+    flex: 1;
+  } */
+
   nav a {
     color: #fff;
     text-decoration: none;
@@ -44,6 +64,14 @@ body {
     list-style: none;
     margin: 0;
     padding: 0;
+    /* my code */
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 1px;
+  }
+
+  .photos img {
+    margin: 1px 1px;
   }
 
   .feature {
